# AWOS-rust

./: Cargo.toml  README.MD
oss_sdk/: Cargo.toml
oss_sdk/src/: lib.rs  oss.rs
oss_sdk/src/http_client/: auth.rs  errors.rs  mod.rs  requests.rs  responses.rs  sign_and_dispatch.rs
oss_sdk/src/types/: common_headers.rs  errors.rs  mod.rs  regions.rs
oss_sdk/src/types/requests/: get_object.rs
src/: awos.rs  aws.rs  errors.rs  inner_client.rs  lib.rs  oss.rs  prelude.rs  types.rs
src/errors/: awos_errors.rs  http_errors.rs  mod.rs
tests/: README.md  example.rs
