[package]
name = "awos-rust"
version = "0.1.0"
authors = ["HuXingYu <huxingyu@shimo.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.5"

oss_sdk = {path = "./oss_sdk", package = "oss_sdk"}

bytes = "^0.5"

reqwest = { version = "0.10.4", features = ["blocking"] }

quick-xml = "0.18"