[package]
name = "awos-rust"
version = "0.1.0"
authors = ["HuXingYu <huxingyu@shimo.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.5"

oss_sdk = {path = "./oss_sdk", package = "oss_sdk"}

bytes = "1.0"

reqwest = { version = "0.11.3", features = ["blocking"] }

quick-xml = "0.22"

# socket2 = "0.4.0"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_credential = "0.46.0"

tokio = "1.5"
rusoto_signature = "0.46.0"
