[package]
name = "awos_rust"
version = "0.1.0"
authors = ["HuXingYu <huxingyu@shimo.com>"]
edition = "2018"



[features]
default = ["oss_enabled"]
oss_enabled = ["oss_sdk"]
s3_enabled = []

[dependencies]
derive_more = "0.99.5"

oss_sdk = {path = "./oss_sdk", package = "oss_sdk", optional = true}


bytes = "1.0"

reqwest = { version = "0.11.3"}

quick-xml = "0.22"

rusoto_core = {version = "0.46.0" }
rusoto_s3 = {version = "0.46.0"}
rusoto_credential = {version = "0.46.0"}
rusoto_signature = {version ="0.46.0"}

tokio = "1.5"

async-trait = "0.1"

# serialize_to_maps = {path = "../serialize_to_headers"}
