[package]
name = "oss_sdk"
version = "0.1.0"
authors = ["HuXingYu <huxingyu@shimo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }

base64 = "0.12.1"

chrono = "0.4"

rust-crypto = "^0.2"

log = "0.4.6"

async-trait = "0.1"

http = "0.2"

bytes = "^0.5"

derive_more = "0.99.5"
